# fullstack-python-starter-template

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  health.py
backend/app/db/: session.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: auth.py
backend/app/services/: auth.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  Router.tsx  index.css
frontend/src/components/: app-bottomnav.tsx  app-footer.tsx  app-header.tsx  app-layout.tsx  app-logo.tsx  app-sidebar.tsx  auth-btns.tsx  mode-toggle.tsx  protected-route.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/config/: app.ts  menu.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx
frontend/src/types/: index.ts
